TEST_PROGRAMS/VALID/05/inline_multiple_array_dec.go
/* Multiple array declaration on single line. */

package main

func main() {
	var a1, a2 [10] int
}
