TEST_PROGRAMS/INVALID/05/invalid_num_args_to_append.go
/* Invalid # of arguments to append. */

package main

var slice []int

func main() {
	append(slice, 0, 1) // Error: append only accepts two arguments.
}
